--- a/xml/en/docbook.html.css
+++ b/xml/en/docbook.html.css
@@ -1,32 +1,49 @@
 body {
-	font-family: Tahoma, Arial, sans-serif;
+	font-family: verdana,sans-serif;
+    font-size: 12px;
 }
 
-h1, h2, h3, h4, h5 {
-	font-family: Arial, serif;
-    color: #990000;
+h1, h2, h3 {
+	font-family: arial,sans-serif;
 }
 
-h2 {
-	font-size: 1.3em;
+h1 {
+    color: #003366;
+    font-size: 22px;
+    font-weight: normal;
+    letter-spacing: 4px;
+    page-break-before: auto;
 }
 
-h3, h4, h5 {
-	font-size: 1em;
-	margin: 0.2em;
+.titlepage h2 {
+    font-size: 20px;
 }
 
-div.note, div.warning, div.tip {
-	margin-left: 0.3in;
-	margin-right: 0.5in;
-	background-color: #e0e0e0;
-	padding: 0.1in;
+.section h2 {
+	font-size: 15px;
+    font-weight: bold;
+    border: 0 solid #CCCCCC;
+    border-bottom-width: 1px;
+    color: #333333;
+    margin-top: 24px;
 }
 
-div.note img, div.warning img, div.tip img {
-	margin-right: 0.1in;
-	/*border: solid 1px blue;*/
+h3 {
+	color: #333333;
+    font-size: 12px;
+    font-weight: bold;
+    margin-top: 16px;
 }
+
+
+
+a {
+    color: #003366;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+
 
 pre.programlisting {
 	border: solid 1px #444;
@@ -44,6 +61,50 @@ pre.screen {
 	clear: right;
 }
 
+
+
+
+table {
+    background-color: #FFFFFF;
+    border: 1px solid #666666;
+    caption-side: bottom;
+    margin: auto;
+    padding: 0;
+    page-break-inside: avoid;
+    width: 80%;
+}
+
+caption {
+    color: #003366;
+    font-family: verdana,sans-serif;
+    font-size: 11px;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+
+th {
+    background-color: #EEEEEE;
+    color: #333333;
+    font-family: georgia,serif;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 2px;
+    text-align: left;
+    vertical-align: middle;
+}
+
+td {
+    background-color: #FFFFFF;
+    border-top: 1px solid #DDDDDD;
+    color: #333333;
+    font-family: georgia,serif;
+    font-size: 12px;
+    font-weight: normal;
+    padding: 2px 2px 2px 10px;
+}
+
+
+/*
 strong.userinput {
     font-weight: normal;
 }
@@ -77,6 +138,9 @@ div.revinfo {
 	font-size: 0.7em;
 	text-decoration: italic;
 }
+*/
+
+/*
 
 code.code {
     font-family: "Terminus", "Courier New", Courier, monospace;
@@ -146,7 +210,7 @@ ul.code li code {
 .code .default { color: #44c; }
 .code .keyword { color: #373; }
 .code .string { color: #c30; }
-
+*/
 
 
 
