Placing "class" attribute on the <th> tags for tables of parameters => we can now use CSS to make sure that columns of all table parameters have the same width

--- a/xml/en/docbook.html.css
+++ b/xml/en/docbook.html.css
@@ -111,6 +111,28 @@ td {
 }
 
 
+.parameters table th.name {
+    width: 10%;
+}
+
+.parameters table th.type {
+    width: 8%;
+}
+
+.parameters table th.description {
+    width: 68%;
+}
+
+.parameters table th.default {
+    width: 6%;
+}
+
+.parameters table th.required {
+    width: 8%;
+}
+
+
+
 /*
 strong.userinput {
     font-weight: normal;
